Added a route for retrieving a person via Purecloud
Notifications are now sent for event invites.

Slight changes were made to the ElasticDao to allow searches to allow better filtering
