# lib/controllers/routes/pureCloud.js
@@ -54,7 +54,18 @@ router.get('/searchPeople', (req, res) => {
     'query' : req.query
   }).pipe(res);
 });
-
+router.use(redisMiddleware);
+/**
+ *  Get qr code using redis data
+ *
+ *  Because this is an image, the access_token can just be sent through the query param instead of the header.
+ **/
+router.get('/retrievePerson', (req, res) => {
+  pureCloudService.retrievePerson({
+    'access_token' : req.access_token,
+    'personID' : req.query.personID
+  }).pipe(res);
+});
 
 
 
