# lib/controllers/socketEndpoints/socket.js
@@ -55,9 +55,15 @@ module.exports = function(io){
         // allocate a new nessage handler for the connection. This handler will
         // relay messages back to the client
         let messageHandler = new SocketMessageHandler(socket);
+        // for orgwide events
         messageHandler.subscribe({
           'type' : 'org',
           'channel' : socket.user.orgGuid
+        });
+        // for event invites
+        messageHandler.subscribe({
+          'type' : 'org',
+          'channel' : socket.user.personID
         });
         // sub to event messages
         socket.on('sub', (eventID) => {
