# lib/models/dao/EventDao.js
@@ -436,13 +436,16 @@ class EventDao {
    **/
   getEventManagers(options){
     return new Promise((resolve, reject) => {
-      CheckIn.find({'event' : options.eventID, 'eventManager' : true}).select('-eventManager -event -_id -__v')
-        .limit(options.limit).skip(options.limit * options.page).exec((error, result) => {
-          if(error || result === null || result === undefined )
-            reject(new CustomError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
-          else
-            resolve(result);
-        });
+      let query = CheckIn.find({'event' : options.eventID, 'eventManager' : true}).select('-eventManager -event -_id -__v')
+      if(!options.getAll){
+        query.limit(options.limit).skip(options.limit * options.page);
+      }
+      query.exec((error, result) => {
+        if(error || result === null || result === undefined )
+          reject(new CustomError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
+        else
+          resolve(result);
+      });
     });
   }
   /**
